adjust pom, scripts, and FileReader to support mac-arm